--- a/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/stylesGrey.css" rel="stylesheet"/>
-</head>
-<body>
-
 <div class="jga jga-profile">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="row container-fluid">
             <div class="col-sm-4 hidden-xs">
                 <div class="navbar-text pull-left">
-                    <a href="widget-list.html">
+                    <a href="widget-list.view.client.html">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
@@ -36,7 +25,7 @@
             <li class="list-group-item">
                 <div class="row">
                     <div class="col-xs-4">
-                        <a href="widget-heading.html">
+                        <a href="widget-heading.view.client.html">
                             Header
                         </a>
                     </div>
@@ -86,7 +75,7 @@
             <li class="list-group-item">
                 <div class="row">
                     <div class="col-xs-4">
-                        <a href="widget-image.html">
+                        <a href="widget-image.view.client.html">
                             Image
                         </a>
                     </div>
@@ -96,7 +85,7 @@
             <li class="list-group-item">
                 <div class="row">
                     <div class="col-xs-4">
-                        <a href="widget-youtube.html">
+                        <a href="widget-youtube.view.client.html">
                             Youtube
                         </a>
                     </div>
@@ -132,7 +121,7 @@
         <div class="row container-fluid">
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="../users/profile.html">
+                    <a href="../../user/templates/profile.view.client.html">
                         <span class="glyphicon glyphicon-user"></span>
                     </a>
                 </div>
@@ -141,5 +130,3 @@
     </nav>
 
 </div>
-</body>
-</html>
