--- a/public/assignment/views/widget/templates/widget-heading.view.client.html
+++ b/public/assignment/views/widget/templates/widget-heading.view.client.html
@@ -1,32 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/stylesGrey.css" rel="stylesheet"/>
-</head>
-<body>
-
 <div class="jga jga-profile">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="row container-fluid">
             <div class="col-sm-4 hidden-xs">
                 <div class="navbar-text pull-left">
-                    <a href="page-list.html">
+                    <a href="widget-list.view.client.html">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        Edit Page
+                        Widget Edit
                     </a>
                 </div>
             </div>
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="page-list.html">
+                    <a href="widget-list.view.client.html">
                         <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 </div>
@@ -45,16 +34,22 @@
                type="text"
                id="name"/>
 
-        <label for="title">Title</label>
-        <input name="title"
-               placeholder="Title"
+        <label for="text">Text</label>
+        <input name="text"
+               placeholder="Text"
                type="text"
                class="form-control"
-               id="title"/>
+               id="text"/>
 
+        <label for="size">Size</label>
+        <input name="size"
+               placeholder="Size"
+               type="number"
+               class="form-control"
+               id="size"/>
 
         <a class="btn btn-default btn-danger btn-block"
-           href="page-list.html"
+           href="widget-list.view.client.html"
            role="button">Delete</a>
     </div>
 
@@ -64,7 +59,7 @@
         <div class="row container-fluid">
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="../users/profile.html">
+                    <a href="../../user/templates/profile.view.client.html">
                         <span class="glyphicon glyphicon-user"></span>
                     </a>
                 </div>
@@ -73,5 +68,3 @@
     </nav>
 
 </div>
-</body>
-</html>
