--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -1,32 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/stylesGrey.css" rel="stylesheet"/>
-</head>
-<body>
-
 <div class="jga jga-profile">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="row container-fluid">
             <div class="col-sm-4 hidden-xs">
                 <div class="navbar-text pull-left">
-                    <a href="../page/page-list.html">
+                    <a href="#!/user/{{model.userId}}/website/">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        Widgets
+                        Pages
                     </a>
                 </div>
             </div>
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="widget-chooser.html">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/new">
                         <span class="glyphicon glyphicon-plus"></span>
                     </a>
                 </div>
@@ -38,14 +27,25 @@
 
     <div class="container-fluid">
 
-        <H1>
-            Widgets Go Here
-        </H1>
+        <ul class="list-group">
 
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Hubble_Ultra_Deep_Field_part_d.jpg">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/PhRa3REdozw" frameborder="0" allowfullscreen></iframe>
-
-
+            <li ng-repeat="page in model.pages" class="list-group-item">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                            {{page.name}}
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-sm-3"></div>
+                    <div class="col-sm-3 hidden-xs"></div>
+                    <div class="col-xs-2">
+                        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}">
+                            <span class="glyphicon glyphicon-cog pull-right"></span>
+                        </a>
+                    </div>
+                </div>
+            </li>
+        </ul>
 
     </div>
 
@@ -55,7 +55,7 @@
         <div class="row container-fluid">
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="../users/profile.html">
+                    <a href="#!/profile/{{model.userId}}">
                         <span class="glyphicon glyphicon-user"></span>
                     </a>
                 </div>
@@ -64,5 +64,3 @@
     </nav>
 
 </div>
-</body>
-</html>
