--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
 <div class="container-fluid">
 
     <h2>Login</h2>
@@ -17,23 +7,22 @@
            placeholder="username"
            class="form-control"
            type="text"
-           id="username"/>
+           id="username"
+           ng-model="model.user.username"/>
 
     <label for="password">Password</label>
     <input name="password"
            placeholder="password"
            type="password"
            class="form-control"
-           id="password"/>
+           id="password"
+           ng-model="model.user.password"/>
 
     <a class="btn btn-default btn-primary btn-block"
-       href="profile.html"
+       ng-click="model.login(model.user)"
        role="button">Login</a>
 
     <a class="btn btn-default btn-success btn-block"
-       href="register.html"
+       href="#!/register"
        role="button">Register</a>
 </div>
-
-</body>
-</html>
