--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/styles.css" rel="stylesheet"/>
-</head>
-<body>
-
 <div class="jga jga-profile">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="row container-fluid">
             <div class="col-xs-3 hidden-xs">
                 <div class="navbar-text pull-left">
-                    <a href="website-list.html">
+                    <a href="#!/user/{{model.userId}}/website">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
@@ -24,25 +13,26 @@
                     </a>
                 </div>
                 <div class="navbar-text pull-right" style="margin-right: 30px;">
-                    <a href="website-new.html">
+                    <a href="#!/user/{{model.userId}}/website">
                         <span class="glyphicon glyphicon-plus"></span>
                     </a>
                 </div>
             </div>
             <div class="col-xs-12 col-lg-9">
                 <div class="navbar-text pull-right">
-                    <a href="website-list.html">
+                    <a ng-click="model.createWebsite(model.website)">
                         <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 </div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        Edit Website
+                        New Website
                     </a>
                 </div>
             </div>
         </div>
     </nav>
+
 
 
     <div class="container-fluid">
@@ -51,46 +41,19 @@
             <div class="col-xs-3 visible-lg jga-split-view-left">
 
                 <ul class="list-group">
-
-                    <li class="list-group-item">
+                    <li ng-repeat="website in model.websites" class="list-group-item">
                         <div class="row">
-                            <div class="col-xs-10">Blogging App</div>
+                            <div class="col-xs-4">{{website.name}}</div>
+                            <div class="col-xs-6 col-sm-3"></div>
+                            <div class="col-sm-3 hidden-xs"></div>
                             <div class="col-xs-2">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </div>
-                        </div>
-
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10">
-                                Address Book App
-                            </div>
-                            <div class="col-xs-2">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10">Script Testing App
-                            </div>
-                            <div class="col-xs-2">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </div>
-                        </div>
-
-
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-xs-10">Blogger</div>
-                            <div class="col-xs-2"></div>
-                            <div class="col-xs-2">
+                                <a href="#!/user/{{model.userId}}/website/{{website._id}}">
                                     <span class="glyphicon glyphicon-cog pull-right"></span>
+                                </a>
                             </div>
                         </div>
                     </li>
+
                 </ul>
 
             </div>
@@ -101,7 +64,8 @@
                        placeholder="Name"
                        class="form-control"
                        type="text"
-                       id="name"/>
+                       id="name"
+                       ng-model="model.website.name"/>
 
                 <label for="description">Description</label>
                 <textarea name="firstName"
@@ -109,13 +73,8 @@
                           placeholder="Description"
                           class="form-control"
                           type="text"
-                          id="description"></textarea>
-
-
-
-                <a class="btn btn-default btn-danger btn-block"
-                   href="website-list.html"
-                   role="button">Delete</a>
+                          id="description"
+                          ng-model="model.website.description"></textarea>
             </div>
         </div>
 
@@ -127,7 +86,7 @@
         <div class="row container-fluid">
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="../users/profile.html">
+                    <a href="#!/profile/{{model.userId}}">
                         <span class="glyphicon glyphicon-user"></span>
                     </a>
                 </div>
@@ -136,5 +95,3 @@
     </nav>
 
 </div>
-</body>
-</html>
