--- a/public/assignment/views/widget/templates/widget-image.view.client.html
+++ b/public/assignment/views/widget/templates/widget-image.view.client.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../css/stylesGrey.css" rel="stylesheet"/>
-</head>
-<body>
-
 <div class="jga jga-profile">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="row container-fluid">
             <div class="col-sm-4 hidden-xs">
                 <div class="navbar-text pull-left">
-                    <a href="widget-list.html">
+                    <a href="widget-list.view.client.html">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
@@ -26,7 +15,7 @@
             </div>
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="widget-list.html">
+                    <a href="widget-list.view.client.html">
                         <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 </div>
@@ -73,11 +62,11 @@
                id="file"/>
 
         <a class="btn btn-default btn-primary btn-block"
-           href="widget-list.html"
+           href="widget-list.view.client.html"
            role="button">Upload Image</a>
 
         <a class="btn btn-default btn-danger btn-block"
-           href="widget-list.html"
+           href="widget-list.view.client.html"
            role="button">Delete</a>
     </div>
 
@@ -87,7 +76,7 @@
         <div class="row container-fluid">
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="../users/profile.html">
+                    <a href="../../user/templates/profile.view.client.html">
                         <span class="glyphicon glyphicon-user"></span>
                     </a>
                 </div>
@@ -96,5 +85,3 @@
     </nav>
 
 </div>
-</body>
-</html>
