--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -32,7 +32,7 @@
             <li ng-repeat="page in model.pages" class="list-group-item">
                 <div class="row">
                     <div class="col-xs-4">
-                        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
+                        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget/new">
                             {{page.name}}
                         </a>
                     </div>
