--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -61,7 +61,7 @@
            role="button">Websites</a>
 
         <a class="btn btn-default btn-danger btn-block"
-           href="login.view.client.html"
+           href="#!/login"
            role="button">Logout</a>
     </div>
 
