--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-sm-8">
                 <div class="navbar-text pull-right">
-                    <a href="widget-chooser.view.client.html">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page{{page._id}}/widget">
                         <span class="glyphicon glyphicon-plus"></span>
                     </a>
                 </div>
