Fix a lot of little things

--- a/public/project/css/styles.css
+++ b/public/project/css/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .jga .navbar-default {
-    background-color: #c431ca;
+    background-color: #5800ca;
 }
 
 .jga .navbar-default .navbar-brand {
@@ -27,7 +27,7 @@ body {
 }
 
 .list-group-item {
-    color: #c431ca;
+    color: #5800ca;
 }
 
 .navbar-text .pull-right {
