--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -57,8 +57,8 @@
                ng-model="model.user.email"/>
 
         <a class="btn btn-default btn-primary btn-block"
-           href="#!/user/{{model.user._id}}/website"
-           role="button">Websites</a>
+           href="#!/user/{{model.user._id}}/tournament"
+           role="button">Tournaments</a>
 
         <a class="btn btn-default btn-danger btn-block"
            href="#!/login"
