--- a/public/project/views/tournament/templates/tournament-edit.view.client.html
+++ b/public/project/views/tournament/templates/tournament-edit.view.client.html
@@ -1,10 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="jga jga-profile">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="row container-fluid">
+            <div class="col-sm-4 hidden-xs">
+                <div class="navbar-text pull-left">
+                    <a href="#!/user/{{model.userId}}/tournament/">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="">
+                        Edit {{model.tournament.name}}
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a ng-click="model.updateTournament(model.tournament)">
+                        <span class="glyphicon glyphicon-ok"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-</body>
-</html>
+
+
+    <div class="container-fluid">
+
+        <label for="name">Name</label>
+        <input name="name"
+               placeholder="Name"
+               class="form-control"
+               type="text"
+               id="name"
+               ng-model="model.tournament.name"/>
+
+
+
+        <a class="btn btn-default btn-primary btn-block"
+           ng-click="model.updateTournament(model.tournament)"
+           role="button">Update Tournament</a>
+
+        <a class="btn btn-default btn-danger btn-block"
+           href="#!/user/{{model.userId}}/tournament/"
+           role="button">Cancel</a>
+
+        <a class="btn btn-default btn-danger btn-block"
+           ng-click="model.deleteTournament(model.tournamendId)"
+           role="button">Delete</a>
+
+    </div>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="col-sm-4 hidden-xs">
+        </div>
+        <div class="row container-fluid">
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a href="#!/profile/{{model.userId}}">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+</div>
