--- a/public/project/views/tournament/templates/tournament-list.view.client.html
+++ b/public/project/views/tournament/templates/tournament-list.view.client.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="jga jga-profile">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="row container-fluid">
+            <div class="col-sm-4 hidden-xs">
+                <div class="navbar-text pull-left">
+                    <a href="#!/user/{{model.userId}}/">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        Tournaments for {{model.tag}}
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a href="#!/user/{{model.userId}}/tournament/new">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-</body>
-</html>
+
+
+    <div class="container-fluid">
+
+        <ul class="list-group">
+
+            <li ng-repeat="tournament in model.tournaments" class="list-group-item">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <a href="#!/user/{{model.userId}}/tournament/{{model.tournamentId}}/match">
+                            {{tournament.name}}
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-sm-3"></div>
+                    <div class="col-sm-3 hidden-xs"></div>
+                    <div class="col-xs-2">
+                        <a href="#!/user/{{model.userId}}/tournament/{{model.tournamentId}}{{tournament._id}}">
+                            <span class="glyphicon glyphicon-cog pull-right"></span>
+                        </a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="col-sm-4 hidden-xs">
+        </div>
+        <div class="row container-fluid">
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a href="#!/profile/{{model.userId}}">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+</div>
