Create Match Views

--- a/public/project/views/match/templates/match-edit.view.client.html
+++ b/public/project/views/match/templates/match-edit.view.client.html
@@ -1,10 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="jga jga-profile">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="row container-fluid">
+            <div class="col-sm-4 hidden-xs">
+                <div class="navbar-text pull-left">
+                    <a href="#!/user/{{model.userId}}/tournament/{{model.tournamentId}}/match">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        Diary for {{model.match.player1}} vs {{model.match.player2}} ({{model.match.score}})
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a href=""
+                    ng-click="model.updateMatch(model.match)">
+                        <span class="glyphicon glyphicon-ok"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid">
 
-</body>
-</html>
+    <p>
+        <br>
+        {{model.match.notes}}
+        <br>
+        <br>
+    </p>
+
+        <label for="name">Edit</label>
+        <input name="name"
+               placeholder="Name"
+               class="form-control"
+               type="text"
+               id="name"
+               ng-model="model.match.notes"/>
+
+
+
+        <a class="btn btn-default btn-primary btn-block"
+           ng-click="model.updateMatch(model.match)"
+           role="button">Update Match</a>
+
+        <a class="btn btn-default btn-danger btn-block"
+           href="#!/user/{{model.userId}}/tournament/{{model.tournamentId}}/match"
+           role="button">Cancel</a>
+
+    </div>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="col-sm-4 hidden-xs">
+        </div>
+        <div class="row container-fluid">
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a href="#!/profile/{{model.userId}}">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+</div>
