--- a/public/project/views/match/templates/match-list.view.client.html
+++ b/public/project/views/match/templates/match-list.view.client.html
@@ -1,10 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="jga jga-profile">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="row container-fluid">
+            <div class="col-sm-4 hidden-xs">
+                <div class="navbar-text pull-left">
+                    <a href="#!/user/{{model.userId}}/tournament/">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                </div>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        Matches for {{model.tournament.name}}
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-</body>
-</html>
+
+
+    <div class="container-fluid">
+
+        <ul class="list-group">
+
+            <li ng-repeat="match in model.matches" class="list-group-item">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <a href="#!/user/{{model.userId}}/tournament/{{model.tournamentId}}/match/{{match._id}}">
+                            {{match.player1}} vs {{match.player2}} ({{match.score}})
+                        </a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="col-sm-4 hidden-xs">
+        </div>
+        <div class="row container-fluid">
+            <div class="col-sm-8">
+                <div class="navbar-text pull-right">
+                    <a href="#!/profile/{{model.userId}}">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+</div>
