--- a/public/project/views/tournament/templates/tournament-new.view.client.html
+++ b/public/project/views/tournament/templates/tournament-new.view.client.html
@@ -42,6 +42,11 @@
                class="form-control"
                id="description"
                ng-model="model.tournament.tag"/>
+    <p>
+        Callonge ID refers to the characters after the Challonge URL. For example, for challonge.com/abc123, the challonge ID is abc123.
+        <br>
+        Tag is the name used in the tournament.
+    </p>
 
         <a class="btn btn-default btn-primary btn-block"
            ng-click="model.createTournament(model.tournament)"
