--- a/public/project/views/user/templates/login.view.client.html
+++ b/public/project/views/user/templates/login.view.client.html
@@ -1,5 +1,12 @@
 <div class="container-fluid">
 
+    <h1>
+        Tournament Diaries
+    </h1>
+    <h4>
+        Never forget the details!
+    </h4>
+
     <h2>Login</h2>
 
     <label for="username">Username</label>
