--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -60,6 +60,9 @@
         <a class="btn btn-default btn-primary btn-block"
            href="#!/user/{{model.user._id}}/tournament"
            role="button">Tournaments</a>
+        <a class="btn btn-default btn-primary btn-block"
+           href=""
+           role="button">Follow</a>
 
         <a class="btn btn-default btn-danger btn-block"
            href="#!/login"
