--- a/public/project/views/user/templates/register.view.client.html
+++ b/public/project/views/user/templates/register.view.client.html
@@ -1,5 +1,11 @@
 <div class="container-fluid">
-
+    
+    <h1>
+        Tournament Diaries
+    </h1>
+    <h4>
+        Never forget the details!
+    </h4>
     <h2>Register</h2>
 
     <label for="username">Username</label>
