--- a/public/project/views/tournament/templates/tournament-list.view.client.html
+++ b/public/project/views/tournament/templates/tournament-list.view.client.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        Tournaments for {{model.tag}}
+                        Tournaments for {{model.user.tag}}
                     </a>
                 </div>
             </div>
